objects/CampaignMember.object
<CustomObject>
    <fields>
        <fullName>AutorabitExtId__c</fullName>
        <description>External Id created by AutoRABIT</description>
        <externalId>true</externalId>
        <label>AutorabitExtId__c</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Contact_Tag__c</fullName>
        <formula>IF(NOT(ISBLANK( ContactId )), TEXT( Contact.Tag__c ) ,  TEXT( Lead.Tag__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Field created for reporting purpose.</inlineHelpText>
        <label>Lead/Contact Tag</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Owner_Same_as_Logged_In_User__c</fullName>
        <formula>IF(NOT(ISBLANK( ContactId )),IF(Contact.OwnerId = $User.Id , &quot;True&quot;, &quot;False&quot;),IF(Lead.OwnerId = $User.Id , &quot;True&quot;, &quot;False&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Created this field for Reporting Purpose.</inlineHelpText>
        <label>Record Owner Same as Logged In User</label>
        <type>Text</type>
    </fields>
    <sharingModel>ControlledByCampaign</sharingModel>
</CustomObject>